# mlops-exercises

./: .env.dev  .env.prod  .env.test  .gitignore  .pre-commit-config.yaml  .sops.yaml  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  secrets.yaml  settings.py
lab01_homework/: .pre-commit-config.yaml  COMPARISION.md  Dockerfile  app.py  docker-compose.yaml  interference.py  main.py  pyproject.toml
lab01_homework/tests/: test_interference.py
lab01_labs/: .env.dev  .env.test  app.py  interference.py  main.py  public_key.asc  pyproject.toml  secrets.yaml  training.py
lab01_labs/tests/: test_main.py  test_settings.py
lab02_homework/: homework.ipynb  pyproject.toml
lab02_labs/: compose.yaml  main.py  notebook_01_psycopg.ipynb  notebook_02_duckdb.ipynb  pyproject.toml
lab03_homework/: main.ipynb  main.py  pyproject.toml
lab03_labs/: notebook_polars.ipynb  pyproject.toml
lab04_homework/: docker-compose.yaml  main.ipynb  main.py  pyproject.toml
lab04_labs/: .gitignore  milvus.ipynb  postgres.ipynb  pyproject.toml
lab05_labs/: README.md
lab05_labs_2/: .gitignore  LAB_INSTRUCTION_2_MLFLOW.ipynb  mlflow.db
lab06_homework/: .gitignore  main.ipynb  pyproject.toml
lab06_labs/: LAB_INSTRUCTION.ipynb
lab07_labs/: main.ipynb  pyproject.toml  save_tokenizer.py
lab07_labs/docker/: infer.py  infer_optimized.py  optimized.Dockerfile  (+2 more)
lab09_labs/: Dockerfile  interference.py  pyproject.toml  raport.md  test.py
lab09_labs/tests/: test_interference.py
lab10_labs/: .gitignore  readme.md
lab11_homework/: readme.md
lab11_labs/: readme.md
lab12_homework/: .gitignore  compose.yaml  pyproject.toml  screeny.md
lab12_labs/: README.md  compose.yaml  screeny.md
lab13_homework/: Dockerfile  Dockerfile.weather  docker-compose.yaml  main.py  mcp_weather.py  screeny.md
lab13_labs/: benchmark.py  guard.py  mcp_time_server.py  mcp_visualization.py  mcp_vllm.py  mcp_weather.py  pyproject.toml  screeny.md  tools.py
(+35 files in other folders)
